--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "grunt-contrib-nodeunit": "~0.2.0",
     "grunt-contrib-uglify": "~0.2.4",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-stylus": "~0.9.0",
+    "grunt-contrib-cssmin": "~0.6.2",
+    "grunt-contrib-csslint": "~0.1.2",
+    "grunt-sftp-deploy": "~0.0.9",
+    "grunt-php": "~0.2.0"
   }
 }
